force-app/main/default/objects/JSON_Transform__c/JSON_Transform__c.object-meta.xml
<CustomObject>
    <description>This is a simple container for JSON documents, values, and definitions.</description>
    <label>JSON Transform</label>
    <nameField>
        <label>JSON Transform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JSON Transforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>