force-app/main/default/objects/JSON_Transform__c/fields/definition__c.field-meta.xml
<CustomField>
    <fullName>definition__c</fullName>
    <label>Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>