force-app/main/default/objects/JSON_Transform__c/fields/document__c.field-meta.xml
<CustomField>
    <fullName>document__c</fullName>
    <label>Document</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>