force-app/main/default/objects/JSON_Transform__c/fields/values__c.field-meta.xml
<CustomField>
    <fullName>values__c</fullName>
    <label>Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>